# python-subreg

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.rst  pyproject.toml  setup.py
docs/: Makefile
docs/source/: api.rst  conf.py  exceptions.rst
subreg/: __init__.py  api.py  exceptions.py  models.py  tests.py
subreg/doc/source/: conf.py  index.rst
